# himalaya

./: .clangd  CLAUDE.md  CMakeLists.txt  vcpkg.json
app/: CMakeLists.txt  main.cpp
app/include/himalaya/app/: application.h  debug_ui.h
app/src/: application.cpp  debug_ui.cpp  main.cpp
docs/: README.md  agent-context.md  current-phase.md  m1-architecture-choices.md  m1-development-order.md  m1-directory-structure.md  m1-interfaces.md  m1-phase1-plan.md  m1-phase2-plan.md  milestone-1.md  milestone-future.md
docs/archive/: conversation-initial-design.md  m1-phase1-plan.md  m1-phase2-plan.md
docs/milestone-1/: m1-architecture-choices.md  m1-design-decisions.md  m1-development-order.md  m1-directory-structure.md  m1-frame-flow.md  m1-implementation-ref.md  m1-interfaces.md
docs/project/: architecture.md  decision-process.md  requirements-and-philosophy.md  technical-decisions.md
docs/roadmap/: milestone-2.md  milestone-3.md
framework/: CMakeLists.txt
framework/include/himalaya/framework/: camera.h  render_graph.h
framework/src/: camera.cpp  imgui_backend.cpp  render_graph.cpp
rhi/: CMakeLists.txt
rhi/include/himalaya/rhi/: commands.h  context.h  descriptors.h  pipeline.h  resources.h  shader.h  swapchain.h
rhi/src/: commands.cpp  context.cpp  descriptors.cpp  pipeline.cpp  placeholder.cpp  resources.cpp  shader.cpp  swapchain.cpp  vma_impl.cpp
shaders/: triangle.frag  triangle.vert
tasks/: m1-phase1.md  m1-phase2.md
tasks/archive/: m1-phase1.md
